--- a/addons/sketchfab/plugin.cfg
+++ b/addons/sketchfab/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Sketchfab"
 description="Sketchfab browsing & importing right inside Godot"
-author="Sketchfab"
-version="1.1.0"
+author="Edouard Murat"
+version="4.0"
 script="plugin.gd"
